--- a/app/src/main/res/layout/activity_image_validator.xml
+++ b/app/src/main/res/layout/activity_image_validator.xml
@@ -8,29 +8,83 @@
     tools:context=".ImageValidator">
 
     <!--  OUTPUT of LIVE Camera Feed  -->
-    <androidx.camera.view.PreviewView
-        android:id="@+id/feed"
-        android:layout_width="240dp"
-        android:layout_height="320dp"
-        android:background="#000"
+    <LinearLayout
+        android:id="@+id/feed_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
 
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/converted"
+        app:layout_constraintBottom_toTopOf="@+id/converted_wrapper"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:paddingBottom="5dp"
+            android:text="CameraX View Finder: 480x640 Pixel"/>
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/feed"
+            android:layout_width="240dp"
+            android:layout_height="320dp"
+            android:background="#000"/>
+
+    </LinearLayout>
 
     <!--  OUTPUT of CONVERTED Feed  -->
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/converted"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="#000"
+    <LinearLayout
+        android:id="@+id/converted_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
 
-        app:layout_constraintTop_toBottomOf="@+id/feed"
+        app:layout_constraintTop_toBottomOf="@+id/feed_wrapper"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:paddingBottom="5dp"
+            android:text="Processed View Finder: 224x224 Pixel"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/converted"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="#000" />
+
+    </LinearLayout>
+
+
+<!--    <androidx.camera.view.PreviewView-->
+<!--        android:id="@+id/feed"-->
+<!--        android:layout_width="240dp"-->
+<!--        android:layout_height="320dp"-->
+<!--        android:background="#000"-->
+
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/converted"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" />-->
+
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:id="@+id/converted"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:background="#000"-->
+
+<!--        app:layout_constraintTop_toBottomOf="@+id/feed"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
