--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="white">#fff</color>
     <color name="red">#f00</color>
     <color name="green">#0f0</color>
-    <color name="bluw">#00f</color>
+    <color name="blue">#00f</color>
 </resources>
