fixed permission related bug; adjusted StartScreen UI

--- a/app/src/main/res/layout/activity_permission_denied.xml
+++ b/app/src/main/res/layout/activity_permission_denied.xml
@@ -67,14 +67,15 @@
         android:text="@string/this_will_only" />
 
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="24dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:layoutDirection="ltr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -84,21 +85,20 @@
             android:id="@+id/buttonExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:text="@string/exit"
+            android:letterSpacing="0.0"
+            android:paddingLeft="0dp"
             android:background="@android:color/transparent"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
             android:textColor="#673AB7"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
@@ -114,15 +114,17 @@
             android:layout_marginBottom="0dp"
             android:background="@android:color/transparent"
             android:text="@string/settings"
+            android:paddingRight="0dp"
+            android:letterSpacing="0.0"
             android:textAlignment="viewEnd"
             android:textAllCaps="false"
             android:textColor="#673AB7"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
