--- a/app/src/main/res/layout/results_component.xml
+++ b/app/src/main/res/layout/results_component.xml
@@ -702,6 +702,29 @@
             android:layout_marginTop="-10dp"
             android:text="Top-5 accuracy: 89.8%"/>
 
+
+        <!--    ROW 7    -->
+        <RadioButton
+            android:id="@+id/radioButton7"
+            android:buttonTint="@color/colorPrimary"
+            android:text="Mirco's Transfer Learning MobileNet V3"
+            android:textColor="#000"
+            android:textSize="14sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+        <TextView
+            android:layout_marginStart="33dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ccc"
+            android:textSize="12sp"
+            android:layout_marginTop="-10dp"
+            android:text="TODO"/>
+
     </RadioGroup>
 
 
