save intermediate changes

--- a/app/src/main/res/layout/activity_permission_denied.xml
+++ b/app/src/main/res/layout/activity_permission_denied.xml
@@ -95,7 +95,7 @@
             android:background="@android:color/transparent"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="#673AB7"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -118,7 +118,7 @@
             android:letterSpacing="0.0"
             android:textAlignment="viewEnd"
             android:textAllCaps="false"
-            android:textColor="#673AB7"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
