--- a/app/src/main/res/layout/activity_view_finder.xml
+++ b/app/src/main/res/layout/activity_view_finder.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#000"
 android:orientation="vertical"
-tools:context=".ViewFinderClassifier">
+tools:context=".ViewFinder">
 
 
 <!--    TODO: 23.09.2020, abends -->
