--- a/TUM_Lens/app/src/main/res/layout/fragment_camera_settings.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_camera_settings.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".CameraSettingsFragment">
+    tools:context=".fragments.CameraSettingsFragment">
 
     <!-- small action bar -->
     <androidx.constraintlayout.widget.ConstraintLayout
