--- a/TUM_Lens/app/src/main/res/layout/fragment_device_selector.xml
+++ b/TUM_Lens/app/src/main/res/layout/fragment_device_selector.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ProcessingUnitSelectorFragment">
+    tools:context=".fragments.ProcessingUnitSelectorFragment">
 
 
     <!-- 'processing unit' selector -->
