--- a/TUM_Lens/app/src/main/res/drawable/focus_circle.xml
+++ b/TUM_Lens/app/src/main/res/drawable/focus_circle.xml
@@ -1,4 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="102dp"
     android:height="102dp"
     android:viewportWidth="102"
