--- a/TUM_Lens/app/src/main/res/drawable/ic_baseline_play_arrow_80.xml
+++ b/TUM_Lens/app/src/main/res/drawable/ic_baseline_play_arrow_80.xml
@@ -1,5 +1,12 @@
-<vector android:height="80dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="80dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M8,5v14l11,-7z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="80dp"
+    android:tint="#FFFFFF"
+    android:viewportHeight="24"
+    android:viewportWidth="24"
+    android:width="80dp">
+
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M8,5v14l11,-7z"/>
 </vector>
