--- a/TUM_Lens/app/src/main/res/layout/activity_permission_denied.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_permission_denied.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".PermissionDenied">
-
-
-
-<!--    <androidx.appcompat.widget.AppCompatImageView-->
-<!--        android:id="@+id/icon"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:layout_marginBottom="32dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/heading"-->
-<!--        app:srcCompat="@drawable/icon_shaddow" />-->
-
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/heading"
@@ -31,8 +21,6 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/welcometext1"
         app:layout_constraintEnd_toEndOf="parent"
-
-
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -50,7 +38,6 @@
         android:textSize="16sp"
         android:text="@string/this_app_feeds" />
 
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/welcometext2"
         android:layout_width="match_parent"
@@ -66,7 +53,6 @@
         android:textSize="16sp"
         android:text="@string/this_will_only" />
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/wrapper"
         android:layout_width="match_parent"
@@ -79,7 +65,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
 
         <Button
             android:id="@+id/buttonExit"
@@ -125,6 +110,5 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
