--- a/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".StartScreen">
-
-<!--TODO-->
-<!--    <androidx.appcompat.widget.AppCompatImageView-->
-<!--        android:id="@+id/icon"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="150dp"-->
-<!--        android:layout_marginBottom="32dp"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/heading"-->
-<!--        app:srcCompat="@drawable/icon_shaddow" />-->
-
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/heading"
@@ -47,7 +38,6 @@
         android:textSize="16sp"
         android:text="@string/this_app_uses" />
 
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/welcometext2"
         android:layout_width="match_parent"
@@ -63,7 +53,6 @@
         android:textSize="16sp"
         android:text="@string/it_therefore" />
 
-
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
@@ -78,7 +67,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
