--- a/TUM_Lens/app/src/main/res/layout/activity_view_finder.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_view_finder.xml
@@ -32,7 +32,41 @@
         android:background="#000"
         android:alpha="0" />
 
-    <!--  CONTAINER FOR FOCUS CIRCLE AND PLAY ICON  -->
+    <!--  TOGGLE TO SWITCH DETECTION MODES  -->
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/detectionModeToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="12dp"
+        app:checkedButton = "@+id/btn_classification"
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        >
+        <Button
+            android:id="@+id/btn_classification"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="@string/image_classification"
+            style="?attr/materialButtonOutlinedStyle"
+            app:strokeWidth="0dp"
+            app:shapeAppearance="@style/Rounded"
+            android:backgroundTint="@color/whiteSlightlyTransparent"
+            android:fontFamily="sans-serif-light"
+
+        />
+        <Button
+            android:id="@+id/btn_detection"
+            android:text="@string/object_detection"
+            style="@style/MaterialButtonToggleGroupStyle"
+            app:strokeWidth="0dp"
+            app:shapeAppearance="@style/Rounded"
+            />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
+    <!--  CONTAINER FOR DETECTION FOCUS CIRCLE AND PLAY ICON  -->
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
