--- a/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CameraRoll">
+    tools:context=".classification.CameraRollActivity">
 
 
 <!--  LAYER 1: allows user to choose image from camera roll; then shows the selected image  -->
