--- a/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_start_screen.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".StartScreen">
+    tools:context=".StartScreenActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/heading"
