--- a/TUM_Lens/app/src/main/res/layout/tfe_od_camera_connection_fragment_tracking.xml
+++ b/TUM_Lens/app/src/main/res/layout/tfe_od_camera_connection_fragment_tracking.xml
@@ -17,12 +17,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.maxjokel.lens.obj_detection.AutoFitTextureView
+    <com.maxjokel.lens.detection.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <com.maxjokel.lens.obj_detection.OverlayView
+    <com.maxjokel.lens.detection.OverlayView
         android:id="@+id/tracking_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
