--- a/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
+++ b/TUM_Lens/app/src/main/res/layout/activity_camera_roll.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".classification.CameraRollActivity">
-
 
 <!--  LAYER 1: allows user to choose image from camera roll; then shows the selected image  -->
     <LinearLayout
-        android:id="@+id/view_finder_root_layout"
+        android:id="@+id/activity_classification_root_layout"
         android:orientation="vertical"
-        android:background="@color/very_light_grey"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layoutDirection="ltr"
@@ -29,34 +29,28 @@
             android:layout_weight="1"
             android:gravity="center_horizontal">
 
-
             <LinearLayout
                 android:id="@+id/ll_pick_image"
-                android:visibility="visible"
-
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:backgroundTint="@color/white"
-
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="34dp"
-
                 android:background="@drawable/rounded_corners"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_baseline_image_24"
-                    android:tint="@color/light_grey"
-                    android:background="@null"
+                    android:tint="@color/colorPrimary"
                     tools:ignore="ContentDescription" />
                 <TextView
                     android:layout_marginTop="8dp"
@@ -64,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:text="@string/tap_to_pick_from_camera_roll"
-                    android:textColor="@color/light_grey"/>
+                    android:textColor="@color/black"/>
             </LinearLayout>
 
 
@@ -74,10 +68,7 @@
                 android:id="@+id/bmp_camera_roll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:scaleType="centerCrop"
-                android:visibility="visible"
-
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -116,9 +107,6 @@
     </LinearLayout>
 
 
-
-
-
 <!--  LAYER 2 aka BOTTOM SHEET    -->
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
@@ -141,7 +129,7 @@
                 app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                 app:behavior_hideable="false"
                 app:behavior_peekHeight="140dp">
-                <include layout="@layout/camera_roll_classifier_bottom_sheet"/>
+                <include layout="@layout/activity_camera_roll_bottom_sheet"/>
             </androidx.core.widget.NestedScrollView>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
