--- a/TUM_Lens/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
+++ b/TUM_Lens/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet_layout"
     android:layout_width="match_parent"
@@ -113,7 +114,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="4dp">
@@ -169,7 +170,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:checked="false"
-            android:gravity="right"
+            android:gravity="end"
             android:text="TFLITE"
             android:textColor="@android:color/black" />
     </LinearLayout>
