--- a/TUM_Lens/app/src/main/res/values/styles.xml
+++ b/TUM_Lens/app/src/main/res/values/styles.xml
@@ -20,6 +20,8 @@
         <!-- does nothing, but should somehow work...        -->
         <item name="android:navigationBarColor">@android:color/black</item>
         <item name="android:statusBarColor">@android:color/black</item>
+
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
@@ -40,7 +42,10 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:backgroundTint">@color/whiteSlightlyTransparent</item>
         <item name="android:textSize">10sp</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="shapeAppearance">@style/Rounded</item>
     </style>
 
 </resources>
