--- a/TUM_Lens/app/src/main/res/values/styles.xml
+++ b/TUM_Lens/app/src/main/res/values/styles.xml
@@ -21,7 +21,20 @@
         <item name="android:navigationBarColor">@android:color/black</item>
         <item name="android:statusBarColor">@android:color/black</item>
 
+        <!-- TODO: make transition smooth, especially between classification and detection mode -->
+        <!-- enable window content transitions -->
+        <item name="android:windowActivityTransitions">true</item>
         <item name="android:windowContentTransitions">true</item>
+
+        <!-- specify enter and exit transitions -->
+        <item name="android:windowEnterTransition">@android:transition/fade</item>
+        <item name="android:windowExitTransition">@android:transition/fade</item>
+
+        <!-- specify shared element transitions -->
+        <item name="android:windowSharedElementEnterTransition">
+            @transition/change_image_transform</item>
+        <item name="android:windowSharedElementExitTransition">
+            @transition/change_image_transform</item>
     </style>
 
     <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
